name:                erudify-ekg
version:             1.0.3
synopsis:            Remote monitoring of processes at Erudify
description:
  This is a clone of the `ekg` library published on hackage. It embeds
  all assets into the library itself, which eases deployment.

  This library lets you remotely monitor a running process over HTTP.
  It provides a simple way to integrate a monitoring server into any
  application.
homepage:            https://github.com/tibbe/ekg
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          simon.meier@erudify.ch
category:            System, Network
build-type:          Simple
cabal-version:       >=1.6
extra-source-files:  LICENSE.icons LICENSE.javascript README.md
                     assets-dev/jquery-1.6.4.js assets-dev/jquery.flot.js
                     examples/Basic.hs

                     assets/index.html assets/monitor.js assets/monitor.css
                     assets/jquery.flot.min.js assets/jquery-1.6.4.min.js
                     assets/bootstrap-1.4.0.min.css
                     assets/chart_line_add.png assets/cross.png
library
  exposed-modules:     System.Remote.Counter
                       System.Remote.Gauge
                       System.Remote.Label
                       System.Remote.Monitoring

  other-modules:       System.Remote.Common
                       System.Remote.Counter.Internal
                       System.Remote.Gauge.Internal
                       System.Remote.Label.Internal
                       System.Remote.Snap

  build-depends:       aeson < 0.7,
                       base >= 4.5 && < 5,
                       bytestring < 1.0,
                       containers < 0.6,
                       filepath < 1.4,
                       network < 2.5,
                       snap-core < 0.10,
                       snap-server < 0.10,
                       text < 0.12,
                       time < 1.5,
                       transformers < 0.4,
                       unordered-containers < 0.3,
                       file-embed == 0.0.*,
                       directory < 1.3
  ghc-options:         -Wall
